--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                                 <img class="rounded-4" src="./assets/images/blog-post-1.jpg" alt="">
                             </div>
                             <div class="card-custom-content p-4">
-                                <p class="text-brand mb-2">20 Dec, 2022</p>
+                                <p class="text-brand mb-2">05-05-2025</p>
                                 <h5 class="mb-4">Websites using HTML,CSS,BOOTSTRAP</h5>
                                 <a href="#" class="link-custom">Read More</a>
                             </div>
@@ -461,14 +461,14 @@
             <div class="container">
                 <div class="row gy-4 justify-content-between">
                     <div class="col-auto">
-                        <p class="mb-0">Designed by <a href="#" class="fw-bold">TUSHAR MISHRA</a></p>
+                        <p class="mb-0">Designed by <a href="#" class="fw-bold">SHIVAM SINGH</a></p>
                     </div>
                     <div class="col-auto">
                         <div class="social-icons">
-                            <a href="https://twitter.com/Mr_Wrath__" target="_blank"><i class="lab la-twitter"></i></a>
-                            <a href="https://www.instagram.com/_toxic_chad_/" target="_blank"><i class="lab la-instagram"></i></a>
-                            <a href="https://www.quora.com/profile/TUSHAR-MISHRA-430" target="_blank"><i class="lab la-quora"></i></a>
-                            <a href="https://github.com/MISHRA-TUSHAR" target="_blank"><i class="lab la-github"></i></a>
+                            <a href="https://twitter.com/shivam" target="_blank"><i class="lab la-twitter"></i></a>
+                            <a href="https://www.instagram.com/shivam.singh2609/" target="_blank"><i class="lab la-instagram"></i></a>
+                            <a href="https://www.quora.com/profile/SHIVAM-SINGH-12778" target="_blank"><i class="lab la-quora"></i></a>
+                            <a href="https://github.com/shivamsingh2609" target="_blank"><i class="lab la-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -489,8 +489,3 @@
 </html>
 
 
-<!-- notes -->
-<!-- mb margin bottom
-rounded for rounded boxes
-p for padding
-lg large screen -->
